cmake_minimum_required(VERSION 3.16)
project(Hw1336)

set(CMAKE_CXX_STANDARD 14)

add_executable(Hw1336 HW1_Ex1.cpp HW1_Ex2.cpp HW3_Ex1.cpp HW3_Ex2.cpp HW4_Ex1.cpp lesson4part1.cpp lesson4part2.cpp lesson5part1.cpp lesson5part2.cpp HW5_Ex1.cpp HW5_Ex2.cpp lesson6part1.cpp lesson6part2.cpp HW6_Ex1.cpp HW6_Ex2.cpp lesson7part1.cpp lesson7part2.cpp HW7_Ex1.cpp HW7_Ex2.cpp HW8_Ex1.cpp HW8_Ex2.cpp HW8_Ex2.h lesson8part1.cpp lesson8part2.cpp lesson9part1.cpp lesson9part2.cpp HW9_Ex1.cpp HW9_Ex2.cpp cmake-build-debug/tester.cpp tester.cpp didko.cpp test.cpp HW10_Ex1.cpp HW10_Ex2.cpp)